# agent-provider-manager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SKILL.md  install-skill.sh  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-gui.yml  release.yml
docs/: agents.md  architecture.md
gui/: DESIGN.md  index.html  package-lock.json  package.json  vite.config.ts
gui/electron/: apm-bridge.ts  main.ts  preload.ts  tsconfig.json
gui/src/: App.tsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main.rs
gui/src/components/: Sidebar.tsx  Toast.tsx
gui/src/hooks/: useApm.ts  useTheme.ts
gui/src/pages/: Agents.tsx  Dashboard.tsx  Providers.tsx  Rules.tsx  Snapshots.tsx  Sync.tsx
gui/src/styles/: globals.css
src/apm/: __init__.py  __main__.py  cli.py  colors.py  config.py  detect.py  doctor.py  logging.py  menu.py  providers.py  registry.json  registry.py  rules.py  snapshot.py  sync.py  updater.py
src/apm/agents/: __init__.py  aider.py  base.py  claude_code.py  codex.py  cursor.py  hermes.py  openclaw.py  opencode.py  pi.py  registry.py  workbuddy.py  zcode.py
tests/: conftest.py  test_base.py  test_cli.py  test_detect.py  test_providers.py  test_registry.py  test_snapshot.py  test_sync.py  test_sync_full.py
tests/agents/: test_adapters.py  test_registry.py
