[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-provider-manager"
version = "0.1.0"
description = "Centralized API provider management for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "jaxtonzhc" }]
keywords = ["ai", "agent", "provider", "api-key", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/jaxtonzhc/apm"
Repository = "https://github.com/jaxtonzhc/apm"
Issues = "https://github.com/jaxtonzhc/apm/issues"

[project.scripts]
apm = "apm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/apm"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
